# ChangeLog for dev-perl/Apache-Test
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.68 2011/01/14 18:46:28 tove Exp $

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Apache-Test-1.30.ebuild,
  -Apache-Test-1.31.ebuild, -Apache-Test-1.32.ebuild:
  Cleanup

*Apache-Test-1.33 (21 Sep 2010)

  21 Sep 2010; Torsten Veller <tove@gentoo.org> +Apache-Test-1.33.ebuild:
  Version bump

*Apache-Test-1.32 (17 Apr 2010)

  17 Apr 2010; Torsten Veller <tove@gentoo.org> +Apache-Test-1.32.ebuild:
  Version bump

*Apache-Test-1.31 (05 Mar 2010)

  05 Mar 2010; Torsten Veller <tove@gentoo.org> +Apache-Test-1.31.ebuild:
  Version bump

  10 Dec 2009; Torsten Veller <tove@gentoo.org> Apache-Test-1.30.ebuild,
  metadata.xml:
  Fix HOMEPAGE (#295603), LICENSE. Change longdescription

  26 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  Apache-Test-1.29.ebuild, Apache-Test-1.30.ebuild:
  Add pkg_setup().

  28 May 2008; Guy Martin <gmsoft@gentoo.org> Apache-Test-1.29.ebuild,
  Apache-Test-1.30.ebuild:
  Added hppa and ~hppa keywords.

*Apache-Test-1.30 (19 May 2008)

  19 May 2008; Yuval Yaari <yuval@gentoo.org> +Apache-Test-1.30.ebuild:
  Version bump (bug #222681)

  13 May 2008; Jeroen Roovers <jer@gentoo.org> Apache-Test-1.29.ebuild:
  Marked ~hppa (LuckyLuke).

  02 Feb 2008; Benedikt Böhm <hollow@gentoo.org> Apache-Test-1.29.ebuild:
  use depend.apache eclass wrt #208033

  29 Jul 2007; Christian Heim <phreak@gentoo.org> Apache-Test-1.29.ebuild:
  Fixing the DEPEND/RDEPEND for the move of net-www/apache to
  www-servers/apache (#78622).

  08 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  -Apache-Test-1.23.ebuild, -Apache-Test-1.26.ebuild,
  -Apache-Test-1.28.ebuild:
  Cleaning up

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Apache-Test-1.29.ebuild:
  ppc stable
