@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Apache-Test
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.68 2011/01/14 18:46:28 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.69 2011/01/18 16:48:20 tove Exp $
+
+*Apache-Test-1.340 (18 Jan 2011)
+
+  18 Jan 2011; Torsten Veller <tove@gentoo.org> +Apache-Test-1.340.ebuild:
+  Version bump
 
   14 Jan 2011; Torsten Veller <tove@gentoo.org> -Apache-Test-1.30.ebuild,
   -Apache-Test-1.31.ebuild, -Apache-Test-1.32.ebuild:
